--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,3 +31,18 @@ body{
   transform-origin: center center;
 }
 
+.circleRotate{
+  animation: rotate 2s ease-in-out 0s infinite normal forwards;
+}
+.pauseCircle{
+  animation-play-state: paused;
+}
+
+@keyframes rotate {
+  0%{
+    transform: rotate(0deg);
+  }
+  95%,100%{
+    transform: rotate(360deg);
+  }
+}
