--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,6 +19,8 @@
   src: url('@fonts/Poppins-Bold.ttf');
 }
 
+
+
 .dashboardLink:hover > span{
   display: block;
 }
@@ -45,4 +47,9 @@ body{
   95%,100%{
     transform: rotate(360deg);
   }
+}
+
+.musicImage:hover > span,
+.musicList:hover > span{
+  visibility: visible;
 }
